fixed bugs and added swagger jwt auth